# blackmoon-lib

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  configure.ac
exampleProgram/: Makefile.am  exampleProgram.c
include/: Makefile.am  blackmoon.h
libblackmoon/: Makefile.am  bit.c  flags.c  libblackmoon.c  socket.c  str_functions.c  structures.c
